--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -1,6 +1,7 @@
 .message
 {
     border:1px solid #0F0;
+    background-color: #FFF;
     opacity: 0.7;
     -webkit-transition: opacity 0.3s ease-in 0s;
     border-top-left-radius: 5px;
@@ -9,4 +10,7 @@
     border-bottom-left-radius: 5px;
     z-index: 999;
     text-align: left;
+    font-family: Yahei;
+    font-size:small;
+
 }
